Workshops/ws2/errors.txt
Guest.cpp:21:1: error: expected ‘;’ before ‘namespace’
 namespace seneca {
 ^
